--- a/containers/rebar-rev-proxy/Dockerfile.in
+++ b/containers/rebar-rev-proxy/Dockerfile.in
@@ -11,7 +11,7 @@ ENTRYPOINT ["/sbin/docker-entrypoint.sh"]
 ADD http://localhost:28569/${DR_TAG}/linux/amd64/rebar-rev-proxy /usr/local/bin/
 RUN apt-get -y update \
     && apt-get install -y --no-install-recommends xmlsec1 nodejs nodejs-legacy npm \
-    && npm install -g bower n \
+    && npm install -g brunch n \
     && n stable \
     && chmod 755 /usr/local/bin/* \
     && mkdir -p /opt/digitalrebar-ux \
@@ -19,9 +19,8 @@ RUN apt-get -y update \
     && rm -rf /var/lib/apt/lists/*    
 RUN git clone -b ${DR_TAG} https://github.com/rackn/digitalrebar-ux /opt/digitalrebar-ux \
   && cd /opt/digitalrebar-ux \
-  && bower --allow-root install --config.interactive=false \
-  && npm install cssnano-cli html-minifier uglify-js \
-  && ./build.sh \
+  && npm install --dev \
+  && brunch build \
   && touch .using_prebuilt
 
 COPY entrypoint.d/*.sh /usr/local/entrypoint.d/
