--- a/core/rails/puma.cfg
+++ b/core/rails/puma.cfg
@@ -6,3 +6,7 @@ state_path("/var/run/rebar/puma.state")
 threads(2,16)
 stdout_redirect("/var/log/rebar/puma.log", "/var/log/rebar/puma.log", true)
 activate_control_app 'unix:///var/run/rebar/pumactl.sock', { no_token: true }
+before_fork do
+  require 'puma_worker_killer'
+  PumaWorkerKiller.enable_rolling_restart
+end
