Update docker-compose fragments to be compatible with the latest docker-compose

--- a/deploy/compose/yaml_templates/base.yml
+++ b/deploy/compose/yaml_templates/base.yml
@@ -22,7 +22,7 @@ logging:
 {{ START ACCESS_MODE==HOST }}
   ports:
     - "514:514"
-    - "514/udp:514/udp"
+    - "514:514/udp"
     - "2514:2514"
 {{ END ACCESS_MODE==HOST }}
 
