--- a/deploy/compose/yaml_templates/dns.yml
+++ b/deploy/compose/yaml_templates/dns.yml
@@ -9,7 +9,7 @@ dns:
 {{ END ACCESS_MODE==FORWARDER }}
 {{ START ACCESS_MODE==HOST }}
   ports:
-    - "53/udp:53/udp"
-    - "6754/tcp:6754/tcp"
+    - "53:53/udp"
+    - "6754:6754"
 {{ END ACCESS_MODE==HOST }}
 
