--- a/deploy/compose/yaml_templates/ntp.yml
+++ b/deploy/compose/yaml_templates/ntp.yml
@@ -5,7 +5,7 @@ ntp:
     file: docker-compose-common.yml
     service: ntp
   ports:
-    - "123/udp:123/udp"
+    - "123:123/udp"
     - "123:123"
 {{ END ACCESS_MODE==HOST }}
 
