--- a/core/barclamps/bios.yml
+++ b/core/barclamps/bios.yml
@@ -1004,4 +1004,4 @@ extra_files:
   - http://poweredgec.com/files/setupbios-2013-10-03.tgz bios/tools
   # Utility for doing various things to the ASPEED BMC and BIOS.
   #- http://upload.aspeedtech.com/SOC/socflash_v10601.zip bios/tools
-  - http://opencrowbar.s3-website-us-east-1.amazonaws.com/socflash_v10601.zip bios/tools
+  - http://rack-sledgehammer.s3-website-us-west-2.amazonaws.com/socflash_v10601.zip bios/tools
